[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "BioMANIA"
version = "0.1"
description = "Simplifying bioinformatics data analysis through conversation"
readme = "README.md"
authors = [{ name = "Batmen-lab", email = "z6dong@uwaterloo.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
urls = {
    "Homepage" = "https://github.com/batmen-lab/BioMANIA"
}
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/batmen-lab/BioMANIA/issues"

[project.optional-dependencies]
# Add optional dependencies here as needed

[project.scripts]
# Define any scripts here

[project.dependencies]
python = ">=3.10"

[tool.setuptools_scm]
# Configuration for setuptools_scm, remove or modify if not using scm for versioning

[tool.setuptools.dynamic]
# List dynamic fields if any (such as version from scm)
